<resources>
    <string name="app_name">projekmobileprog</string>
    <string name="login_header">Login</string>
    <string name="name">Name :</string>
    <string name="cpassword">Confirm Password :</string>
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="text_username">Type Username</string>
    <string name="text_password">Type Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_header">Register</string>
    <string name="register_name">Type Name</string>
    <string name="register_cpassword">Confirm Password</string>
    <string name="save">Save</string>
    <string name="btn_back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile_header">Edit Profile</string>
    <string name="data_kosong">Data Kosong</string>
    <string name="update_novel">Update Novel</string>
    <string name="update_tittle">Tittle :</string>
    <string name="update_tittle1">Update Tittle</string>
    <string name="author">Author :</string>
    <string name="category1">Category :</string>
    <string name="update_story">Update your story</string>
    <string name="logout">Log Out</string>
    <string name="profile">Profile</string>
    <string name="updateaja">Update</string>
    <string name="remove">Remove</string>
    <string name="newtittle">Type New Tittle</string>
    <string name="post">Post</string>
    <string name="insertn">Post Novel</string>
    <string name="typenews">Type New Story</string>
    <string name="dashboard">Dashboard</string>
    <string name="manage_p">Manage Post</string>
    <string name="aulist">Author List</string>
    <string name="catlist">Category List</string>
    <string name="in">in</string>
    <string name="textview">Text View</string>
    <string name="body">Body :</string>
    <string name="mynov">My Novels</string>
    <string name="id">Id :</string>
</resources>