<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btn_text"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsblack"
            android:gravity="center"
            android:text="@string/update_novel"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_marginBottom="16dp" />

       <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitolight"
            android:text="@string/update_tittle"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/update_title_ui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitolight"
            android:background="@color/back_textview"
            android:hint="@string/update_tittle1"
            android:inputType="text"
            android:textColorHint="@color/text_hint"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitolight"
            android:text="@string/author"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/update_author_ui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitolight"
            android:background="@color/back_textview"
            android:textColor="@color/text_hint"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitolight"
            android:text="@string/category1"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/spinner_update_category_ui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitolight"
            android:background="@color/back_textview"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/nunitolight"
            android:text="@string/body"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/update_body_ui"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@color/back_textview"
            android:fontFamily="@font/nunitolight"
            android:hint="@string/update_story"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:textColor="@color/text_hint"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/save_novel_ui"
                android:layout_width="0dp"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:backgroundTint="@color/btn_kuning"
                android:text="@string/save"
                android:textColor="@color/btn_text"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/update_to_manage_ui"
                android:layout_width="0dp"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:backgroundTint="@color/btn_kuning"
                android:text="@string/cancel"
                android:textColor="@color/btn_text"
                android:layout_marginStart="8dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>