<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btn_text"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/register_name_ui"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:background="@color/back_textview"
        android:ems="10"
        android:fontFamily="@font/nunitolight"
        android:gravity="center"
        android:hint="@string/register_name"
        android:inputType="text"
        android:textColorHint="@color/text_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286" />

    <EditText
        android:id="@+id/register_password_ui"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:background="@color/back_textview"
        android:ems="10"
        android:fontFamily="@font/nunitolight"
        android:gravity="center"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:textColorHint="@color/text_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="98dp"
        android:layout_height="24dp"
        android:ems="10"
        android:fontFamily="@font/nunitolight"
        android:text="@string/username"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />

    <EditText
        android:id="@+id/register_confirm_password_ui"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:background="@color/back_textview"
        android:ems="10"
        android:fontFamily="@font/nunitolight"
        android:gravity="center"
        android:hint="@string/register_cpassword"
        android:inputType="textPassword"
        android:textColorHint="@color/text_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="98dp"
        android:layout_height="24dp"
        android:ems="10"
        android:fontFamily="@font/nunitolight"
        android:text="@string/password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="98dp"
        android:layout_height="24dp"
        android:ems="10"
        android:fontFamily="@font/nunitolight"
        android:text="@string/name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="138dp"
        android:layout_height="24dp"
        android:ems="10"
        android:fontFamily="@font/nunitolight"
        android:text="@string/cpassword"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.608" />

    <EditText
        android:id="@+id/register_username_ui"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:background="@color/back_textview"
        android:ems="10"
        android:fontFamily="@font/nunitolight"
        android:gravity="center"
        android:hint="@string/text_username"
        android:inputType="text"
        android:textColorHint="@color/text_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <Button
        android:id="@+id/register_to_login_ui"
        android:layout_width="118dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/btn_kuning"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_back"
        android:textColor="@color/btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <Button
        android:id="@+id/register_ui"
        android:layout_width="118dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/btn_kuning"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/register"
        android:textColor="@color/btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="227dp"
        android:layout_height="92dp"
        android:ems="10"
        android:fontFamily="@font/poppinsblack"
        android:gravity="center"
        android:text="@string/register_header"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />


</androidx.constraintlayout.widget.ConstraintLayout>