<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/btn_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/login_username_ui"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:background="@color/back_textview"
        android:ems="10"
        android:fontFamily="@font/nunitolight"
        android:gravity="center"
        android:hint="@string/text_username"
        android:inputType="text"
        android:textColorHint="@color/text_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <EditText
        android:id="@+id/login_password_ui"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:background="@color/back_textview"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text_password"
        android:fontFamily="@font/nunitolight"
        android:inputType="textPassword"
        android:textColorHint="@color/text_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />


    <Button
        android:id="@+id/register_ui"
        android:layout_width="118dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/btn_kuning"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/register"
        android:textColor="@color/btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <Button
        android:id="@+id/login_ui"
        android:layout_width="118dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/btn_kuning"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textColor="@color/btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="227dp"
        android:layout_height="92dp"
        android:ems="10"
        android:fontFamily="@font/poppinsblack"
        android:gravity="center"
        android:text="@string/login_header"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="98dp"
        android:layout_height="24dp"
        android:ems="10"
        android:fontFamily="@font/nunitolight"
        android:text="@string/username"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="98dp"
        android:layout_height="24dp"
        android:ems="10"
        android:fontFamily="@font/nunitolight"
        android:text="@string/password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

</androidx.constraintlayout.widget.ConstraintLayout>