<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btn_text"
    tools:context=".DashboardActivity">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsblack"
        android:gravity="center"
        android:text="@string/dashboard"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greeting_ui"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="@color/btn_text"
        android:fontFamily="@font/poppinsblack"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_novel"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <Button
        android:id="@+id/profil_ui"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/profile"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toStartOf="@+id/manage_post_ui"
        android:backgroundTint="@color/btn_kuning"
        android:textColor="@color/btn_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_novel" />

    <Button
        android:id="@+id/manage_post_ui"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/btn_kuning"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/manage_p"
        android:textColor="@color/btn_text"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profil_ui"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_novel" />

    <Button
        android:id="@+id/list_author_ui"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/btn_kuning"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/aulist"
        android:textColor="@color/btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/list_category_ui"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profil_ui"
        app:layout_constraintVertical_bias="0.507" />

    <Button
        android:id="@+id/list_category_ui"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/btn_kuning"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/catlist"
        android:textColor="@color/btn_text"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/list_author_ui"
        app:layout_constraintTop_toBottomOf="@id/profil_ui"
        app:layout_constraintVertical_bias="0.523" />

</androidx.constraintlayout.widget.ConstraintLayout>